--- a/style.css
+++ b/style.css
@@ -700,19 +700,12 @@ textarea {
 .back-to-top a {
   text-decoration: none;
   z-index: 99;
-  /* Make sure it does not overlap */
   border: none;
-  /* Remove borders */
   outline: none;
-  /* Remove outline */
   color: #E5F2C9;
-  /* Text color */
   cursor: pointer;
-  /* Add a mouse pointer on hover */
   padding: 0.25em 1em;
-  /* Some padding */
   border-radius: 25px;
-  /* Rounded corners */
 }
 .back-to-top a:hover, .back-to-top a:focus {
   text-decoration: underline;
@@ -726,6 +719,7 @@ textarea {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
 }
 .social-nav ul a {
   display: block;
@@ -768,19 +762,12 @@ textarea {
 .back-to-top a {
   text-decoration: none;
   z-index: 99;
-  /* Make sure it does not overlap */
   border: none;
-  /* Remove borders */
   outline: none;
-  /* Remove outline */
   color: #E5F2C9;
-  /* Text color */
   cursor: pointer;
-  /* Add a mouse pointer on hover */
   padding: 0.25em 1em;
-  /* Some padding */
   border-radius: 25px;
-  /* Rounded corners */
 }
 .back-to-top a:hover, .back-to-top a:focus {
   text-decoration: underline;
@@ -794,6 +781,7 @@ textarea {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
 }
 .social-nav ul a {
   display: block;
@@ -862,19 +850,12 @@ textarea {
 .back-to-top a {
   text-decoration: none;
   z-index: 99;
-  /* Make sure it does not overlap */
   border: none;
-  /* Remove borders */
   outline: none;
-  /* Remove outline */
   color: #E5F2C9;
-  /* Text color */
   cursor: pointer;
-  /* Add a mouse pointer on hover */
   padding: 0.25em 1em;
-  /* Some padding */
   border-radius: 25px;
-  /* Rounded corners */
 }
 .back-to-top a:hover, .back-to-top a:focus {
   text-decoration: underline;
@@ -888,6 +869,7 @@ textarea {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
 }
 .social-nav ul a {
   display: block;
@@ -930,19 +912,12 @@ textarea {
 .back-to-top a {
   text-decoration: none;
   z-index: 99;
-  /* Make sure it does not overlap */
   border: none;
-  /* Remove borders */
   outline: none;
-  /* Remove outline */
   color: #E5F2C9;
-  /* Text color */
   cursor: pointer;
-  /* Add a mouse pointer on hover */
   padding: 0.25em 1em;
-  /* Some padding */
   border-radius: 25px;
-  /* Rounded corners */
 }
 .back-to-top a:hover, .back-to-top a:focus {
   text-decoration: underline;
@@ -956,6 +931,7 @@ textarea {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
 }
 .social-nav ul a {
   display: block;
